@@ -1,3 +1,10 @@
+2004-07-05(Mon) 08:31:35 +0900  Koichi Sasada  <ko1@atdot.net>
+
+	* ndk_logger.rb : ignore IOError when logging
+
+	* plugins/googlebot.nb : add option ':googlec_maxwords'
+
+
 2004-07-05(Mon) 08:02:43 +0900  Koichi Sasada  <ko1@atdot.net>
 
 	* nadokarc : auto detect filename encoding(carelessly)
